--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "medicine-delivery-app",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
@@ -8,9 +9,10 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "turbo": "^2.2.3",
+    "typescript": "5.5.4",
     "prettier": "^3.2.5",
-    "turbo": "^2.3.0",
-    "typescript": "5.5.4"
+    "eslint": "^8.57.0"
   },
   "engines": {
     "node": ">=18"
