readme.md added + monorepo init fixes

--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@mda/typescript-config/shared-library.json",
   "compilerOptions": {
+    "tsBuildInfoFile": "./dist/.tmp/tsconfig.tsbuildinfo",
     "rootDir": "src",
     "outDir": "dist"
   },
